--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,3 +13,25 @@ td {
   border-style: solid;
   border-width: 1px;
 }
+
+.bigtitle {
+  float: right;
+  padding: 20px;
+  padding-right: 40px;
+  font-size: 35px;
+}
+
+.subtitle {
+  font-size: 15px;
+}
+
+.welcome {
+    padding-top: 40px;
+    width: 200px;
+}
+
+.commits {
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+}
