Add support for multiple local repositories
Pollamatia can now follow different repositories. You still need to have
each one checked out, up to date and tracking the branch you want to
watch for commits on - that's a "limitation" of Git.

I'm storing the repository in the URL, since it's nice to have multiple
tabs open, each with a different repository.

Everything should auto-migrate but you will need to create a repo
manually in the db (using irb):

require './models/boot.rb'

r=Repo.new
r.github_commit_url = 'http://www.github.com/proj-name/repo-name/commit'
r.local_path = '/home/username/dev/git/proj-path'
r.name = 'Awesome'

Commit.update(repo_id: Repo.first.id)

r=Repo.new
r.github_commit_url = '...' # another repo commit path
r.local_path = '...' # another local git repo path
r.name = 'Amazing'

You then have to select the repo by putting /?repo=Amazing or
/?repo=Awesome in the URL. Don't worry, I'll improve this when I start
adding Javascript!

--- a/views/index.slim
+++ b/views/index.slim
@@ -5,15 +5,18 @@ head
     | Pollamatia
 body
 
-  .header
-    .bigtitle
-      | Pollamatia
-      .subtitle
-        i
-          | given enough eyeballs, all bugs are shallow
+  form action="reviews" method="post"
+    input type="hidden" name="repo" value="#{@repo.name}"
 
-    .welcome
-      form action="reviews" method="post"
+    .header
+      .bigtitle
+        | Pollamatia
+        .subtitle
+          i
+            | given enough eyeballs, all bugs are shallow
+
+      .welcome
+
         h3
           | Welcome ~
           select name="name"
@@ -24,31 +27,32 @@ body
               - else
                 option value="#{user}"
                   = user
+          | @ #{@repo.name}
 
-  .commits
-    table
-      tr
-        th
-          | Commit
-        th
-          | By
-        th
-          | Checked by
-      - @logs.each do |log|
+    .commits
+      table
         tr
-          td
-            a name="log#{log.id}"
-              == log.commit_html(@github)
-              br
-              == log.body_html
-          td
-            = log.author
-          td
-            - users = log.users
-            = users.map(&:name).join(' ') if users.any?
-          td
-            button type="submit" name="plus" value="#{log.id}"
-              | +1
-            - if users.any?
-              button type="submit" name="minus" value="#{log.id}"
-                | -1
+          th
+            | Commit
+          th
+            | By
+          th
+            | Checked by
+        - @logs.each do |log|
+          tr
+            td
+              a name="log#{log.id}"
+                == log.commit_html(@github)
+                br
+                == log.body_html
+            td
+              = log.author
+            td
+              - users = log.users
+              = users.map(&:name).join(' ') if users.any?
+            td
+              button type="submit" name="plus" value="#{log.id}"
+                | +1
+              - if users.any?
+                button type="submit" name="minus" value="#{log.id}"
+                  | -1
