--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,37 +1,115 @@
+/*
+  Much of the nice table design was based on work by Devin Price:
+    http://wptheming.com/2011/01/simple-table-css3
+
+  His work was based on Orman Clarke's simple table design:
+    http://www.premiumpixels.com/simple-little-table-psd
+
+  Thanks!
+*/
 
 body {
-  font-family: sans-serif
+  font: 12px/15px Arial, Helvetica, sans-serif;
+  color: #555;
+  background:#f5f5f5
 }
 
 table {
-  border-style: solid;
-  border-width: 1px;
-  border-spacing: 0px;
+  margin: 0;
+  padding: 0;
+
+  outline: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+
+  overflow: hidden;
+  border: 1px solid #d3d3d3;
+  background: #fefefe;
+
+  -moz-border-radius:10px; /* FF1+ */
+  -webkit-border-radius:10px; /* Saf3-4 */
+  border-radius:10px;
+
+  -moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
+
+  border-spacing: 0;
 }
 
+th {
+  padding-top:22px; text-shadow: 1px 1px 1px #fff; background:#e8eaeb;
+}
+
+td, td {
+  padding:18px 28px 18px; text-align:center;
+  border-top:1px solid #e0e0e0; border-right:1px solid #e0e0e0;
+}
+
+tr.odd-row td {background: #f6f6f6;}
+
+td.first, th.first {text-align: left}
+
+td.last {border-right: none;}
+
 td {
-  border-style: solid;
-  border-width: 1px;
+  background: -moz-linear-gradient(100% 25% 90deg, #fefefe, #f9f9f9);
+  background: -webkit-gradient(linear, 0% 0%, 0% 25%, from(#f9f9f9), to(#fefefe));
+}
+
+tr.odd-row td {
+  background: -moz-linear-gradient(100% 25% 90deg, #f6f6f6, #f1f1f1);
+  background: -webkit-gradient(linear, 0% 0%, 0% 25%, from(#f1f1f1), to(#f6f6f6));
+}
+
+th {
+  background: -moz-linear-gradient(100% 20% 90deg, #e8eaeb, #ededed);
+  background: -webkit-gradient(linear, 0% 0%, 0% 20%, from(#ededed), to(#e8eaeb));
+}
+
+tr:first-child th.first {
+  -moz-border-radius-topleft:10px;
+  -webkit-border-top-left-radius:10px; /* Saf3-4 */
+}
+
+tr:first-child th.last {
+  -moz-border-radius-topright:10px;
+  -webkit-border-top-right-radius:10px; /* Saf3-4 */
+}
+
+tr:last-child td.first {
+    -moz-border-radius-bottomleft:10px;
+    -webkit-border-bottom-left-radius:10px; /* Saf3-4 */
+}
+
+tr:last-child td.last {
+    -moz-border-radius-bottomright:10px;
+    -webkit-border-bottom-right-radius:10px; /* Saf3-4 */
+}
+
+a {color: #484848;}
+
+.logtitle {
+  font-weight: 800;
 }
 
 .bigtitle {
   float: right;
-  padding: 20px;
-  padding-right: 40px;
+  padding: 20px 40px 20px 20px;
   font-size: 35px;
 }
 
 .subtitle {
   font-size: 15px;
+  padding-top: 10px;
 }
 
 .welcome {
-    padding-top: 40px;
-    width: 300px;
+  padding-top: 40px;
+  width: 300px;
 }
 
 .commits {
-    width: 95%;
-    margin-left: auto;
-    margin-right: auto;
+  width: 95%;
+  margin-left: auto;
+  margin-right: auto;
 }
