Add Basic Auth, fix table styling with empty cells
Firefox and IE don't draw cells without content - so some borders go
missing. Fixed that with some high tech nbsp's.

Adding optional Basic Auth: if you are upgrading you need to add the
basic_username and basic_password methods to your config.rb - let them
return nil if you don't want any auth.

--- a/views/index.slim
+++ b/views/index.slim
@@ -53,7 +53,10 @@ body
               = log.author
             td
               - users = log.users
-              = users.map(&:name).join(' ') if users.any?
+              - if users.any?
+                = users.map(&:name).join(' ')
+              - else
+                | &nbsp;
             td
               button type="submit" name="plus" value="#{log.id}"
                 | +1
