Style visited commits lighter
This lets browser history help us see which commits we've seen before.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -86,7 +86,8 @@ tr:last-child td.last {
     -webkit-border-bottom-right-radius:10px; /* Saf3-4 */
 }
 
-a {color: #484848;}
+a { color: #484848; }
+a:visited { color: #878787; }
 
 .logtitle {
   font-weight: 800;
